export interface DocumentosInterface {
    id: number;
    nombre_documento: string;
    abreviatura: string;
}
