export interface PaisesInterface {
    id: number;
    nombre: string;
    iso: string;
}
